// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Google renders correctly 1`] = `
<DocumentFragment>
  <div
    class="google-picker "
    style="width: 652px; background: rgb(255, 255, 255); border: 1px solid rgb(223, 225, 229); box-sizing: initial; display: flex; flex-wrap: wrap; -webkit-border-radius: 8px 8px 0px 0px; border-radius: 8px 8px 0px 0px;"
  >
    <div
      style="height: 57px; width: 100%; padding-top: 16px; padding-bottom: 16px; padding-left: 16px; font-size: 20px; box-sizing: border-box; font-family: Roboto-Regular, HelveticaNeue, Arial, sans-serif;"
    >
      Color picker
    </div>
    <div
      style="width: 30%; height: 228px; padding: 0px; background: rgb(34, 25, 77); position: relative; overflow: hidden;"
    />
    <div
      style="width: 70%; padding: 0px; position: relative; overflow: hidden;"
    >
      <div
        style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; background: rgb(43, 0, 255);"
      >
        <style>
          
          .saturation-white {
            background: -webkit-linear-gradient(to right, #fff, rgba(255,255,255,0));
            background: linear-gradient(to right, #fff, rgba(255,255,255,0));
          }
          .saturation-black {
            background: -webkit-linear-gradient(to top, #000, rgba(0,0,0,0));
            background: linear-gradient(to top, #000, rgba(0,0,0,0));
          }
        
        </style>
        <div
          class="saturation-white"
          style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;"
        >
          <div
            class="saturation-black"
            style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;"
          />
          <div
            style="position: absolute; top: 70%; left: 66.66666666666667%; cursor: default;"
          >
            <div
              style="width: 20px; height: 20px; -webkit-border-radius: 22px; border-radius: 22px; border: 2px solid rgb(255, 255, 255); -webkit-transform: translate(-12px, -13px); transform: translate(-12px, -13px); background: rgb(34, 26, 77);"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      style="margin: auto; width: 95%;"
    >
      <div
        class="flexbox-fix"
        style="display: flex; box-sizing: border-box; height: 52px; padding-top: 22px;"
      >
        <div
          style="height: 8px; position: relative; margin: 0px 16px; width: 100%;"
        >
          <div
            style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px; -webkit-border-radius: 4px; border-radius: 4px;"
          >
            <div
              class="hue-horizontal"
              style="padding: 0px 2px; position: relative; height: 100%; -webkit-border-radius: 4px; border-radius: 4px;"
            >
              <style>
                
            .hue-horizontal {
              background: linear-gradient(to right, #f00 0%, #ff0 17%, #0f0
                33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to right, #f00 0%, #ff0
                17%, #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }

            .hue-vertical {
              background: linear-gradient(to top, #f00 0%, #ff0 17%, #0f0 33%,
                #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
              background: -webkit-linear-gradient(to top, #f00 0%, #ff0 17%,
                #0f0 33%, #0ff 50%, #00f 67%, #f0f 83%, #f00 100%);
            }
          
              </style>
              <div
                style="position: absolute; left: 69.44444444444443%;"
              >
                <div
                  style="width: 20px; height: 20px; -webkit-border-radius: 22px; border-radius: 22px; -webkit-transform: translate(-10px, -7px); transform: translate(-10px, -7px); background: rgb(43, 0, 255); border: 2px solid white;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flexbox-fix"
        style="display: flex; height: 100px; margin-top: 4px;"
      >
        <div
          style="width: 100%;"
        >
          <div
            style="padding: 0px 4.4px; box-sizing: border-box;"
          >
            <div
              style="position: relative;"
            >
              <input
                id="rc-editable-input-1"
                spellcheck="false"
                style="width: 100%; height: 38px; box-sizing: border-box; padding: 4px 10% 3px; text-align: center; border: 1px solid rgb(218, 220, 224); font-size: 11px; text-transform: lowercase; -webkit-border-radius: 5px; border-radius: 5px; outline: none; font-family: Roboto, Arial, sans-serif;"
                value="#22194D"
              />
              <label
                for="rc-editable-input-1"
                style="text-align: center; font-size: 12px; background: rgb(255, 255, 255); position: absolute; text-transform: uppercase; color: rgb(60, 64, 67); width: 35px; top: -6px; left: 0px; right: 0px; margin-left: auto; margin-right: auto; font-family: Roboto, Arial, sans-serif;"
              >
                hex
              </label>
            </div>
          </div>
          <div
            style="padding-top: 10px; display: flex; -webkit-justify-content: space-between; justify-content: space-between;"
          >
            <div
              style="flex-grow: 1; margin: 0px 4.4px;"
            >
              <div
                style="position: relative;"
              >
                <input
                  id="rc-editable-input-2"
                  spellcheck="false"
                  style="height: 38px; width: 100%; border: 1px solid rgb(218, 220, 224); box-sizing: border-box; font-size: 11px; text-transform: lowercase; -webkit-border-radius: 5px; border-radius: 5px; outline: none; padding-left: 10px; font-family: Roboto, Arial, sans-serif;"
                  value="34, 25, 77"
                />
                <label
                  for="rc-editable-input-2"
                  style="left: 10px; text-align: center; font-size: 12px; background: rgb(255, 255, 255); position: absolute; text-transform: uppercase; color: rgb(60, 64, 67); width: 32px; top: -6px; font-family: Roboto, Arial, sans-serif;"
                >
                  rgb
                </label>
              </div>
            </div>
            <div
              style="flex-grow: 1; margin: 0px 4.4px;"
            >
              <div
                style="position: relative;"
              >
                <input
                  id="rc-editable-input-3"
                  spellcheck="false"
                  style="height: 38px; width: 100%; border: 1px solid rgb(218, 220, 224); box-sizing: border-box; font-size: 11px; text-transform: lowercase; -webkit-border-radius: 5px; border-radius: 5px; outline: none; padding-left: 10px; font-family: Roboto, Arial, sans-serif;"
                  value="250°, 67%, 30%"
                />
                <label
                  for="rc-editable-input-3"
                  style="left: 10px; text-align: center; font-size: 12px; background: rgb(255, 255, 255); position: absolute; text-transform: uppercase; color: rgb(60, 64, 67); width: 32px; top: -6px; font-family: Roboto, Arial, sans-serif;"
                >
                  hsv
                </label>
              </div>
            </div>
            <div
              style="flex-grow: 1; margin: 0px 4.4px;"
            >
              <div
                style="position: relative;"
              >
                <input
                  id="rc-editable-input-4"
                  spellcheck="false"
                  style="height: 38px; width: 100%; border: 1px solid rgb(218, 220, 224); box-sizing: border-box; font-size: 11px; text-transform: lowercase; -webkit-border-radius: 5px; border-radius: 5px; outline: none; padding-left: 10px; font-family: Roboto, Arial, sans-serif;"
                  value="250°, 50%, 20%"
                />
                <label
                  for="rc-editable-input-4"
                  style="left: 10px; text-align: center; font-size: 12px; background: rgb(255, 255, 255); position: absolute; text-transform: uppercase; color: rgb(60, 64, 67); width: 32px; top: -6px; font-family: Roboto, Arial, sans-serif;"
                >
                  hsl
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GoogleFields renders correctly 1`] = `
<DocumentFragment>
  <div
    class="flexbox-fix"
    style="display: flex; height: 100px; margin-top: 4px;"
  >
    <div
      style="width: 100%;"
    >
      <div
        style="padding: 0px 4.4px; box-sizing: border-box;"
      >
        <div
          style="position: relative;"
        >
          <input
            id="rc-editable-input-9"
            spellcheck="false"
            style="width: 100%; height: 38px; box-sizing: border-box; padding: 4px 10% 3px; text-align: center; border: 1px solid rgb(218, 220, 224); font-size: 11px; text-transform: lowercase; -webkit-border-radius: 5px; border-radius: 5px; outline: none; font-family: Roboto, Arial, sans-serif;"
            value="#FF0000"
          />
          <label
            for="rc-editable-input-9"
            style="text-align: center; font-size: 12px; background: rgb(255, 255, 255); position: absolute; text-transform: uppercase; color: rgb(60, 64, 67); width: 35px; top: -6px; left: 0px; right: 0px; margin-left: auto; margin-right: auto; font-family: Roboto, Arial, sans-serif;"
          >
            hex
          </label>
        </div>
      </div>
      <div
        style="padding-top: 10px; display: flex; -webkit-justify-content: space-between; justify-content: space-between;"
      >
        <div
          style="flex-grow: 1; margin: 0px 4.4px;"
        >
          <div
            style="position: relative;"
          >
            <input
              id="rc-editable-input-10"
              spellcheck="false"
              style="height: 38px; width: 100%; border: 1px solid rgb(218, 220, 224); box-sizing: border-box; font-size: 11px; text-transform: lowercase; -webkit-border-radius: 5px; border-radius: 5px; outline: none; padding-left: 10px; font-family: Roboto, Arial, sans-serif;"
              value="255, 0, 0"
            />
            <label
              for="rc-editable-input-10"
              style="left: 10px; text-align: center; font-size: 12px; background: rgb(255, 255, 255); position: absolute; text-transform: uppercase; color: rgb(60, 64, 67); width: 32px; top: -6px; font-family: Roboto, Arial, sans-serif;"
            >
              rgb
            </label>
          </div>
        </div>
        <div
          style="flex-grow: 1; margin: 0px 4.4px;"
        >
          <div
            style="position: relative;"
          >
            <input
              id="rc-editable-input-11"
              spellcheck="false"
              style="height: 38px; width: 100%; border: 1px solid rgb(218, 220, 224); box-sizing: border-box; font-size: 11px; text-transform: lowercase; -webkit-border-radius: 5px; border-radius: 5px; outline: none; padding-left: 10px; font-family: Roboto, Arial, sans-serif;"
              value="0°, 100%, 100%"
            />
            <label
              for="rc-editable-input-11"
              style="left: 10px; text-align: center; font-size: 12px; background: rgb(255, 255, 255); position: absolute; text-transform: uppercase; color: rgb(60, 64, 67); width: 32px; top: -6px; font-family: Roboto, Arial, sans-serif;"
            >
              hsv
            </label>
          </div>
        </div>
        <div
          style="flex-grow: 1; margin: 0px 4.4px;"
        >
          <div
            style="position: relative;"
          >
            <input
              id="rc-editable-input-12"
              spellcheck="false"
              style="height: 38px; width: 100%; border: 1px solid rgb(218, 220, 224); box-sizing: border-box; font-size: 11px; text-transform: lowercase; -webkit-border-radius: 5px; border-radius: 5px; outline: none; padding-left: 10px; font-family: Roboto, Arial, sans-serif;"
              value="0°, 100%, 50%"
            />
            <label
              for="rc-editable-input-12"
              style="left: 10px; text-align: center; font-size: 12px; background: rgb(255, 255, 255); position: absolute; text-transform: uppercase; color: rgb(60, 64, 67); width: 32px; top: -6px; font-family: Roboto, Arial, sans-serif;"
            >
              hsl
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GooglePointer renders correctly 1`] = `
<DocumentFragment>
  <div
    style="width: 20px; height: 20px; -webkit-border-radius: 22px; border-radius: 22px; -webkit-transform: translate(-10px, -7px); transform: translate(-10px, -7px); background: rgb(43, 0, 255); border: 2px solid white;"
  />
</DocumentFragment>
`;

exports[`GooglePointerCircle renders correctly 1`] = `
<DocumentFragment>
  <div
    style="width: 20px; height: 20px; -webkit-border-radius: 22px; border-radius: 22px; border: 2px solid rgb(255, 255, 255); -webkit-transform: translate(-12px, -13px); transform: translate(-12px, -13px); background: rgb(34, 26, 77);"
  />
</DocumentFragment>
`;
